Seed customer and user done for API testing purpose

--- a/Todo.txt
+++ b/Todo.txt
@@ -1,6 +1,8 @@
 Successmessage on register customer and user - DONE
 Seed Customer for API
 Responsiveness
+Countries table colour - DONE
+Response cashing test (clock removal) - DONE
 
 Users pageinator error
  - DONE
